changes images src

--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 }
 
 .hero_section {
-    background-image: url(/img/81f3ff974d82520780078ba1cfbd453a1583259680.png);
+    background-image: url(./img/hero-bg.png);
     background-position: center;
     background-size: cover;
     color: white;
