--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 }
 
 .hero_section {
-    background-image: url(./img/hero-bg.png);
+    background: url(./img/hero-bg.png);
     background-position: center;
     background-size: cover;
     color: white;
